# esp32-dds-control

./: .gitignore  README.md
dashboard/: index.html  run.sh  server.py
rti_app/: USER_QOS_PROFILES.xml  build.sh  rti_publisher.cxx  rti_subscriber.cxx  smart_home.cxx  smart_home.hpp  smart_homePlugin.cxx  smart_homePlugin.hpp
smart_home_dds/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  smart_home.idl
smart_home_dds/components/: README.md
smart_home_dds/components/eprosima/: CMakeLists.txt
smart_home_dds/components/eprosima/Micro-CDR/: README.md
smart_home_dds/components/eprosima/Micro-CDR/.github/workflows/: ci_linux.yml  ci_windows.yml  codeql-analysis.yml
smart_home_dds/components/eprosima/Micro-CDR/include/ucdr/: config.h
smart_home_dds/components/eprosima/Micro-XRCE-DDS-Client/include/uxr/client/: config.h
smart_home_dds/host_tools/: build.sh  led_publisher.c  servo_publisher.c  state_subscriber.c
smart_home_dds/main/: CMakeLists.txt  idf_component.yml  smart_home.c  smart_home.h  smart_home_client.c  wifi_sta.c  wifi_sta.h
